Fixed up spacing

--- a/screen.css
+++ b/screen.css
@@ -20,7 +20,7 @@ header {
 }
 
 h1, h2, h3, h4 {
-  font-weight: normal;
+  font-weight: 100;
 }
 
 code {
